manifests/headlamp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: headlamp
    namespace: headlamp
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
spec:
    ingressClassName: traefik
    tls:
        - hosts:
              - dashboard.k8s.orb.local
              - dashboard.k8s.mk.local
          secretName: demo-tls
    rules:
        - host: dashboard.k8s.orb.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: headlamp
                            port:
                                number: 80
        - host: dashboard.k8s.mk.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: headlamp
                            port:
                                number: 80
